2025-05-02  Spencer Baugh  <sbaugh@janestreet.com>

	Previously, we assumed (roughly) that substitute-in-file-name
	always returns a suffix of the original string.  But
	substitute-in-file-name on "/ssh:user@host:/~/" returns
	"/ssh:user@host:~/", preserving the TRAMP magic prefix.  Weaken
	the assertion in completion--sifn-boundaries to allow this; the
	new assertion is more clear about the property we care about,
	anyway.

	* tramp-tests.el (tramp--test-emacs31-p, tramp--split-on-boundary)
	(tramp-test51-file-name-completion-boundaries): Add.

2025-04-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test20-file-modes-without-file-attributes)
	(tramp-test21-file-links-without-file-attributes): New tests.

2025-03-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-file-name-completion)
	(tramp-test26-interactive-file-name-completion): Adapt tests.

2025-03-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test18-file-attributes)
	(tramp-test21-file-links): Adapt tests.

2025-03-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2025-03-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (vc-handled-backends): Suppress only if noninteractive.
	(tramp-test11-copy-file, tramp-test12-rename-file)
	(tramp-test18-file-attributes, tramp-test21-file-links)
	(tramp--test-check-files): Adapt tests.

2025-02-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-enabled)
	(tramp-test03-file-name-host-rules): Don't wrap
	`tramp-cleanup-connection' with `ignore-errors'.

2025-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (top): Set `vc-handled-backends' to nil.
	(tramp--test-enabled): Rearrange code.

2024-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test39-make-lock-file-name): Adapt test.
	(tramp-test42-utf8): Do not run expensive tests on MS Windows.
