@@ -1,3 +1,9 @@
+2025-05-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp--test-split-on-boundary)
+	(tramp-test26-file-name-completion-boundaries): Rename.  Move up.
+	(tramp--test-emacs31-p): Move up.
+
 2025-05-02  Spencer Baugh  <sbaugh@janestreet.com>
 
 	Previously, we assumed (roughly) that substitute-in-file-name
